--- a/src/index.css
+++ b/src/index.css
@@ -8,16 +8,12 @@
   --blue-blue-background-gradient: linear-gradient(180deg, #5fc9f8, #147efb);
   --blue-to-main-bg-background: linear-gradient(180deg, #147efb 0%, #232323 60%);
   --high-contrast-text-over-blue-bg: #232323;
-  --tan-text: #DDA15E;
-  --green-text: #606C38;
   --accent-blue: #0077b6;
   --big-shadow: -.5em 1em 2em #111;
-  /* --small-shadow: -3px 6px 12px #111; */
   --colorful-shadow:  8em 8em 5em -10em #fecb2e,
                       -8em -8em 5em -10em #fc3158,
                       8em -8em 5em -10em #53d769,
                       -8em 8em 5em -10em #5fc9f8;
-  /* --colorful-shadow-0-animate */
   --colorful-shadow-small:  16px 16px 10px -15px #147efb,
                             -16px -16px 10px -15px #4DB7F9,
                             16px -16px 10px -15px #147efb,
@@ -34,6 +30,7 @@
   --small-header-height: 50px;
   --bw-icon-filter: invert(90%);
   --container-margin:  3em 0;
+  --dark-mode-text: #94DAFF;
   
   /* header text styles */
   --font-size: 4em;
@@ -43,7 +40,6 @@
   --background-clip: text;
   --webkit-background-clip: text;
   --webkit-text-fill-color: transparent;
-  /*  */
   
   
   --dm-slider-dot-top: 5px;
@@ -59,8 +55,6 @@
   --blue-blue-background-gradient: linear-gradient(180deg, #0033FE, #147efb);
   --blue-to-main-bg-background: linear-gradient(180deg, #147efb 0%, #ddd 100%);
   --high-contrast-text-over-blue-bg: #eee;
-  --tan-text: #DDA15E;
-  --green-text: #606C38;
   --accent-blue: #0077b6;
   --big-shadow: -.5em 1em 2em #696969;
   --bigger-shadow: -.5em 1em 3em #666;
@@ -69,6 +63,7 @@
   --medium-text: #555;
   --svg-filter: invert(10%);
   --bw-icon-filter: invert(10%);
+  --dark-mode-text: #002E55;
   
   --dm-slider-dot-top: 5px;
   --dm-slider-dot-left: 5px;
